apps/mesh-config/demo-mesh-enrollment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: demo
