apps/mesh-config/namespace-monitoring.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: monitoring
