apps/mesh-config/kiali-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kiali
  namespace: istio-system
spec:
  to:
    kind: Service
    name: kiali
    weight: 100
  port:
    targetPort: http
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
